k8s/backend-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: backend-pod

spec:
  containers:
    - name: backend
      image: jtbiswass/mern-devops-backend:latest
      ports:
        - containerPort: 5000
