k8s/load-generator.yaml
apiVersion: v1
kind: Pod

metadata:
  name: load-generator

spec:
  containers:
    - name: load-generator
      image: busybox
      command:
        - /bin/sh
        - -c
        - |
          while true; do
            wget -q -O- http://backend-service:5000/api/health > /dev/null
          done
